add navbar with filler links and commented out real link_tos with paths to user auth- signin, signup, signout

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,29 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">YummyYums</a>
+    </div>
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav navbar-right">
+        <!-- <% if @current_user %>
+          <li><%= link_to "Sign Out", "signup_path" %></li>
+          <li><%= link_to @current_user.fullname, "user_path(@current_user)" %></li>
+        <% else %>
+          <li><%= link_to "Sign In", "signin_path" %></li>
+          <li><%= link_to "Sign Up", "signout_path" %></li>
+        <% end %> -->
+        <li><a href="#">Full Name</a></li>
+        <li><a href="#">Sign Out</a></li>
+        <li><a href="#">Sign In</a></li>
+        <li><a href="#">Sign Out</a></li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
 
 <%= yield %>
 
