--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,8 +19,8 @@
           <li><%= link_to "Sign Out", "signup_path" %></li>
           <li><%= link_to @current_user.fullname, "user_path(@current_user)" %></li>
         <% else %>
-          <li><%= link_to "Sign In", "signin_path" %></li>
-          <li><%= link_to "Sign Up", "signout_path" %></li>
+          <li><%= link_to "Sign In", "login_path" %></li>
+          <li><%= link_to "Sign Up", "logout_path" %></li>
         <% end %> -->
         <li><a href="#">Full Name</a></li>
         <li><a href="#">Sign Out</a></li>
@@ -30,8 +30,10 @@
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
+<div class="wrapper">
 
-<%= yield %>
+  <%= yield %>
+</div>
 
 </body>
 </html>
