--- a/app/views/user_recipes/index.html.erb
+++ b/app/views/user_recipes/index.html.erb
@@ -2,8 +2,17 @@
 
 <table>
   <thead>
-    <th>
-      
-    </th>
+    <tr>
+      <th>Title</th>
+    <tr>
   </thead>
+  <tbody>
+    <tr>
+      <% @user.recipes.each do |user_recipe| %>
+        <td>
+          <%= user_recipe.title %>
+        </td>
+      <%end%>
+    </tr>
+  </tbody>
 </table>
