--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,1 +1,16 @@
-Recipes Page - Test
+<h1>All recipes</h1>
+<br>
+<table>
+<tr>
+  <th>Title</th>
+  <th>Description</th>
+  <th>Instruction</th>
+</tr>
+<tr>
+  <% @recipes.each do |recipe| %>
+      <td><%= recipe.title %></td>
+        <td><%= recipe.description %></td>
+          <td><%= recipe.instruction %></td>
+  </tr>
+  <% end %>
+</table>
