User can see recipe show page and navigate from user_recipe index page

--- a/app/views/user_recipes/index.html.erb
+++ b/app/views/user_recipes/index.html.erb
@@ -10,7 +10,7 @@
     <tr>
       <% @user.recipes.each do |user_recipe| %>
         <td>
-          <%= user_recipe.title %>
+          <%= link_to user_recipe.title, recipe_path(user_recipe) %>
         </td>
       <%end%>
     </tr>
