user can navigate from home page to all recipes

--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -6,5 +6,6 @@ Instruction: <%= @recipe.instruction %>
 <%= form_for @user_recipe do |f| %>
 <%= f.label :user_id, "Share with" %>
 <%= f.collection_select :user_id, User.all, :id, :email  %>
+<%= f.hidden_field :recipe_id, :value => @recipe.id %>
 <%= f.submit "Share" %>
 <% end %>
