--- a/app/views/user_recipes/index.html.erb
+++ b/app/views/user_recipes/index.html.erb
@@ -1,6 +1,6 @@
 
-<h1>Your recipes</h1>
-
+<h1 class= "page-header">Your recipes</h1>
+<%= link_to "All Recipes", recipes_path %>
 <table>
   <thead>
     <tr>
