--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -8,7 +8,7 @@
 </tr>
 <tr>
   <% @recipes.each do |recipe| %>
-      <td><%= recipe.title %></td>
+      <td><%= link_to recipe.title, recipe_path(recipe) %></td>
         <td><%= recipe.description %></td>
           <td><%= recipe.instruction %></td>
   </tr>
