--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,33 +7,40 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="#">YummyYums</a>
+  <nav class="navbar navbar-default navbar-fixed-top">
+    <div class="container">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="#">YummyYums</a>
+        </div>
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav navbar-right">
+            <!-- <% if @current_user %>
+              <li><%= link_to "Sign Out", "signup_path" %></li>
+              <li><%= link_to @current_user.fullname, "user_path(@current_user)" %></li>
+            <% else %>
+              <li><%= link_to "Sign In", "login_path" %></li>
+              <li><%= link_to "Sign Up", "logout_path" %></li>
+            <% end %> -->
+            <li><a href="#">Full Name</a></li>
+            <li><a href="#">Sign Out</a></li>
+            <li><a href="#">Sign In</a></li>
+            <li><a href="#">Sign Out</a></li>
+          </ul>
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container-fluid -->
     </div>
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav navbar-right">
-        <!-- <% if @current_user %>
-          <li><%= link_to "Sign Out", "signup_path" %></li>
-          <li><%= link_to @current_user.fullname, "user_path(@current_user)" %></li>
-        <% else %>
-          <li><%= link_to "Sign In", "login_path" %></li>
-          <li><%= link_to "Sign Up", "logout_path" %></li>
-        <% end %> -->
-        <li><a href="#">Full Name</a></li>
-        <li><a href="#">Sign Out</a></li>
-        <li><a href="#">Sign In</a></li>
-        <li><a href="#">Sign Out</a></li>
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
-<div class="wrapper">
+  </nav>
+  <div class="wrapper">
 
-  <%= yield %>
-</div>
-
+    <%= yield %>
+  </div>
+  <footer>
+    <div class="container">
+      <p class="pull-right"><a href="#">Back to top</a></p>
+      <p class="team-name">a los quatros production &copy;2015</p>
+    </div>
+  </footer>
 </body>
 </html>
