--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,22 +11,18 @@
     <div class="container">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand" href="#">YummyYums</a>
+          <a class="navbar-brand" href="/">YummyYums</a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
-            <!-- <% if @current_user %>
-              <li><%= link_to "Sign Out", "signup_path" %></li>
-              <li><%= link_to @current_user.fullname, "user_path(@current_user)" %></li>
+            <% if @current_user %>
+            <li><%= link_to @current_user.fullname, user_path(@current_user) %></li>
+              <li><%= link_to "Log Out", logout_path %></li>
             <% else %>
-              <li><%= link_to "Sign In", "login_path" %></li>
-              <li><%= link_to "Sign Up", "logout_path" %></li>
-            <% end %> -->
-            <li><a href="#">Full Name</a></li>
-            <li><a href="#">Sign Out</a></li>
-            <li><a href="#">Sign In</a></li>
-            <li><a href="#">Sign Out</a></li>
+              <li><%= link_to "Login", login_path %></li>
+              <li><%= link_to "Sign Up", signup_path %></li>
+            <% end %>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
@@ -37,7 +33,7 @@
     <%= yield %>
   </div>
   <footer>
-    <div class="container">
+    <div class="container footer">
       <p class="pull-right"><a href="#">Back to top</a></p>
       <p class="team-name">a los quatros production &copy;2015</p>
     </div>
