--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,8 +1,15 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@import url(http://fonts.googleapis.com/css?family=Poiret+One|Quicksand:400,700|Bree+Serif);
+
+// font-family: 'Poiret One', cursive;
+// font-family: 'Quicksand', sans-serif;
+// font-family: 'Bree Serif', serif;
 
 body{
   background-image: url('restaurant_icons.png');
+  font-family: 'Quicksand', sans-serif;
+  font-size: 14pt;
 }
 .wrapper{
   margin: 50px 20% 0;
@@ -11,6 +18,10 @@ body{
   opacity: .7;
   border-left: 5px solid #B7250E;
   border-right: 5px solid #B7250E;
+}
+.navbar-brand{
+  font-family: 'Bree Serif', serif;
+  font-size: 18pt;
 }
 
 .navbar-default .navbar-brand:hover,
