--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -11,6 +11,13 @@
       <td><%= link_to recipe.title, recipe_path(recipe) %></td>
         <td><%= recipe.description %></td>
           <td><%= recipe.instruction %></td>
+          <td><% if current_user.admin? %>
+            <%= link_to "edit", edit_recipe_path(recipe) %>&nbsp;&nbsp;&nbsp;</td>
+          <td><%= link_to "delete", recipe, method: :delete,
+                                  data: { confirm: "You sure?" } %></td>
+
+  <% end %>
+
   </tr>
   <% end %>
 </table>
