--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,8 +16,8 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
-            <% if @current_user %>
-            <li><%= link_to @current_user.fullname, user_path(@current_user) %></li>
+            <% if current_user %>
+            <li><%# link_to @current_user.first_name, user_path(@current_user) %></li>
               <li><%= link_to "Log Out", logout_path %></li>
             <% else %>
               <li><%= link_to "Login", login_path %></li>
