--- a/app/views/user_recipes/index.html.erb
+++ b/app/views/user_recipes/index.html.erb
@@ -5,16 +5,26 @@
   <thead>
     <tr>
       <th>Title</th>
+      <th>
+        Like?
+      </th>
     <tr>
   </thead>
   <tbody>
     <tr>
-      <% @user.recipes.each do |user_recipe| %>
+      <% @user_recipes.each do |user_recipe| %>
         <td>
-          <%= link_to user_recipe.title, recipe_path(user_recipe) %>
+          <%= link_to user_recipe.recipe.title, recipe_path(user_recipe.recipe_id)%>
         </td>
+        <td>
+          <%= user_recipe.user_like %>
+        </td>
+        <td>
+          <%= button_to "Like this recipe", like_path(user_recipe)%>
+        </td>
+      </tr>
       <%end%>
-    </tr>
+
   </tbody>
 
 </table>
