--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container col-md-12">
 
   <%= form_for @user, url: signup_path, class:"form-horizontal"  do |f| %>
 
