--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -23,10 +23,17 @@ body{
   font-family: 'Bree Serif', serif;
   font-size: 18pt;
 }
-
-.navbar-default .navbar-brand:hover,
+.navbar-default .navbar-brand{
+  color: #B7250E;
+}
+.navbar-default .navbar-brand:hover{
+  color:#777;
+}
 .navbar-default .navbar-nav > li > a:hover {
   color: #B7250E;
+}
+.navbar-default .navbar-brand:hover,
+.navbar-default .navbar-nav > li > a:hover{
   -moz-transform: scale(1.2);
   -webkit-transform: scale(1.2);
   -o-transform: scale(1.2);
@@ -43,4 +50,21 @@ footer {
 
 .footer{
   text-align:center;
+}
+
+.page-header h1 {
+  text-align:center;
+}
+.action {
+  text-align:center;
+}
+
+.btn-primary{
+  background-color:#B7250E;
+  border-color:#B7250E;
+  padding: 14px 30px;
+}
+.btn-primary:hover{
+  background-color:#B7250E;
+  border-color:#B7250E;
 }
