change googlefont link to be ok with heroku

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,6 +1,6 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
-@import url(http://fonts.googleapis.com/css?family=Poiret+One|Quicksand:400,700|Bree+Serif);
+@import url(https://fonts.googleapis.com/css?family=Poiret+One|Quicksand:400,700|Bree+Serif);
 
 // font-family: 'Poiret One', cursive;
 // font-family: 'Quicksand', sans-serif;
