--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -1,4 +1,3 @@
-
 <div class="container col-md-12">
 
   <%= form_for @user, url: signup_path, class:"form-horizontal"  do |f| %>
@@ -61,7 +60,7 @@
         </div>
     </div>
 
-</dov
+</div>
 </div>
 
 
