fix background image for production

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -7,7 +7,7 @@
 // font-family: 'Bree Serif', serif;
 
 body{
-  background-image: url('restaurant_icons.png');
+  background-image: image-url('restaurant_icons.png');
   font-family: 'Quicksand', sans-serif;
   font-size: 14pt;
 }
