--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
-            <% if current_user %>
+            <% if current_user && current_user.role != "visitor"%>
               <li><%= link_to "#{current_user.full_name}", user_path(current_user) %></li>
               <li><%= link_to "Sign Out", logout_path %></li>
             <% else %>
