--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,10 @@
         <div class="navbar-header">
           <a class="navbar-brand" href="/">YummyYums</a>
         </div>
+        <ul class="nav navbar-nav">
+          <li><%= link_to "All Recipes", recipes_path %></li>
+          <li><%= link_to "Users", users_path %></li>
+        </ul>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
