add link to add new recipe on all recipe show page and user recipe index page

--- a/app/views/user_recipes/index.html.erb
+++ b/app/views/user_recipes/index.html.erb
@@ -1,3 +1,6 @@
+<div class="pull-right">
+  <%= link_to 'Add A Recipe', new_recipe_path, class:"btn btn-default" %>
+</div>
 
 <h1 class= "page-header">Your recipes</h1>
 <%= link_to "All Recipes", recipes_path %>
