--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,5 +1,10 @@
+<div class="pull-right">
+  <%= link_to 'Add A Recipe', new_recipe_path, class:"btn btn-default" %>
+</div>
+
 <h1>All recipes</h1>
 <br>
+
 <table>
 <tr>
   <th>Title</th>
@@ -11,12 +16,10 @@
       <td><%= link_to recipe.title, recipe_path(recipe) %></td>
         <td><%= recipe.description %></td>
           <td><%= recipe.instruction %></td>
-          <td><% if current_user.admin? %>
-            <%= link_to "edit", edit_recipe_path(recipe) %>&nbsp;&nbsp;&nbsp;</td>
+          <td>  <%= link_to "edit", edit_recipe_path(recipe) %>&nbsp;&nbsp;&nbsp;</td>
           <td><%= link_to "delete", recipe, method: :delete,
                                   data: { confirm: "You sure?" } %></td>
 
-  <% end %>
 
   </tr>
   <% end %>
