--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -10,7 +10,7 @@ Instruction: <%= @recipe.instruction %>
 <%= f.submit "Share" %>
 <% end %>
 
-<div><%= link_to 'Add a Review', new_recipe_review_path(@recipe), class:"btn btn" %></div>
+<div><%= link_to 'Add a Review', new_recipe_review_path(@recipe), class:"btn btn-primary" %></div>
 
 <table class="table">
   <thead>
