--- a/app/views/user_recipes/index.html.erb
+++ b/app/views/user_recipes/index.html.erb
@@ -1,5 +1,5 @@
 <div class="pull-right">
-  <%= link_to 'Add A Recipe', new_recipe_path, class:"btn btn-default" %>
+  <%= link_to 'Add A Recipe', new_recipe_path, class:"btn btn-primary" %>
 </div>
 
 <h1 class= "page-header">Your recipes</h1>
