--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -23,7 +23,7 @@ Instruction: <%= @recipe.instruction %>
   <tr>
     <% @recipe.reviews.each do |review| %>
     <td><%= review.description %></td>
-    <td><%="#{current_user.full_name}" %>
+    <td>review creater</td>
       <td><%= link_to "edit", edit_recipe_review_path(@recipe, review) %> &nbsp;&nbsp;&nbsp;</td>
         <td><%= link_to "delete", recipe_review_path(@recipe, review), method: :delete,
         data: { confirm: "You sure?" } %></td>
