--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,9 +32,10 @@
       </div><!-- /.container-fluid -->
     </div>
   </nav>
-  <div class="wrapper">
-
-    <%= yield %>
+  <div class="container fill">
+    <div id="wrapper">
+      <%= yield %>
+    </div>
   </div>
   <footer>
     <div class="container footer">
