--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -1,4 +1,5 @@
-<div class="container col-md-12">
+<div class="row">
+<div class="col-md-12">
 
   <%= form_for [@recipe, @review], class:"form-horizontal"  do |f| %>
 
@@ -16,5 +17,7 @@
       <%= f.submit class:"btn btn-primary"  %>
     </div>
   </div>
-</div>
+
 <% end %>
+</div>
+</div>
