remove extra container classes -cws

--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,4 +1,4 @@
-<div class="container col-md-12">
+<div class="col-md-12">
 
   <%= form_for @recipe, class:"form-horizontal"  do |f| %>
   <div class="form-group">
@@ -35,5 +35,6 @@
       <%= f.submit class:"btn btn-primary"  %>
     </div>
   </div>
-</div>
+
 <% end %>
+</div>
