--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container col-md-12">
+<div class="col-md-12">
 
   <%= form_for @user, url: signup_path, class:"form-horizontal"  do |f| %>
 
@@ -59,9 +59,5 @@
           <%= f.submit class:"btn btn-primary"  %>
         </div>
     </div>
-
+    <% end %>
 </div>
-</div>
-
-
-<% end %>
