--- a/app/views/user_recipes/index.html.erb
+++ b/app/views/user_recipes/index.html.erb
@@ -3,31 +3,36 @@
 </div>
 
 <h1 class= "page-header">Your recipes</h1>
-<%= link_to "All Recipes", recipes_path %>
-<table>
+<%= link_to "All Recipes", recipes_path, class:"btn btn-primary" %>
+
+<table class="table">
   <thead>
     <tr>
-      <th>Title</th>
       <th>
-        Like?
+        Title
       </th>
-    <tr>
-  </thead>
-  <tbody>
-    <tr>
-      <% @user_recipes.each do |user_recipe| %>
-        <td>
-          <%= link_to user_recipe.recipe.title, recipe_path(user_recipe.recipe_id)%>
-        </td>
-        <td>
-          <%= user_recipe.user_like %>
-        </td>
-        <td>
-          <%= button_to "Like this recipe", like_path(user_recipe)%>
-        </td>
-      </tr>
-      <%end%>
+      <th>
+        Favorite
+      </th>
+      <tr>
+      </thead>
+      <tbody>
+        <tr>
+          <% @user_recipes.each do |user_recipe| %>
+          <td>
+            <%= link_to user_recipe.recipe.title, recipe_path(user_recipe.recipe_id)%>
+          </td>
+          <td>
+            <% if user_recipe.user_like? %>
+            <span class="glyphicon glyphicon-heart-empty" aria-hidden="true"></span>
+            <% end %>
+          </td>
+          <td>
+            <%= button_to "Like", like_path(user_recipe)%>
+          </td>
+        </tr>
+        <%end%>
 
-  </tbody>
+      </tbody>
 
-</table>
+    </table>
