--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -1,20 +1,16 @@
-<div class="col-md-12">
-
+<div class="page-header">
+  <h1> Sign up for YummyYums! </h1>
+</div>
+<div class="col-md-offset-3 col-md-6">
   <%= form_for @user, url: signup_path, class:"form-horizontal"  do |f| %>
-
-  <div class="page-header">
-    <h1> Sign up for YummyYums! </h1>
-  </div>
-
   <div class="form-group">
     <div class="field">
       <div class="control-label">
         <%= f.label :first_name, class:"control-label"  %>
       </div>
     </div>
-      <%= f.text_field :first_name, class:"form-control" %>
+    <%= f.text_field :first_name, class:"form-control" %>
   </div>
-
   <div class="form-group">
     <div class="field">
       <div class="control-label">
@@ -23,7 +19,6 @@
     </div>
     <%= f.text_field :last_name, class:"form-control" %>
   </div>
-
   <div class="form-group">
     <div class="field">
       <div class="control-label">
@@ -34,7 +29,6 @@
       <%= f.email_field :email, class:"form-control" %>
     </div>
   </div>
-
   <div class="form-group">
     <div class="field">
       <div class="control-label">
@@ -43,7 +37,6 @@
     </div>
     <%= f.password_field :password, class:"form-control" %>
   </div>
-
   <div class="form-group">
     <div class="field">
       <div class="control-label">
@@ -52,12 +45,10 @@
     </div>
     <%= f.password_field :password_confirmation, class:"form-control" %>
   </div>
-
-
-    <div class="form-group">
-        <div class="action">
-          <%= f.submit class:"btn btn-primary"  %>
-        </div>
+  <div class="form-group">
+    <div class="action">
+      <%= f.submit class:"btn btn-primary"  %>
     </div>
-    <% end %>
+  </div>
+  <% end %>
 </div>
