update all recipe layout page

--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -10,15 +10,13 @@
     <tr>
       <th>Title</th>
       <th>Description</th>
-      <th>Instruction</th>
     </tr>
   </thead>
   <tbody>
     <% @recipes.each do |recipe| %>
     <tr>
       <td><%= link_to recipe.title, recipe_path(recipe) %></td>
-      <td><%= recipe.description %></td>
-      <td><%= recipe.instruction %></td>
+      <td><%= truncate recipe.description, :length   => 60, :separator => /\w/%></td>
       <td><%= link_to "edit", edit_recipe_path(recipe) %>&nbsp;&nbsp;&nbsp;</td>
       <td><%= link_to "delete", recipe, method: :delete,
       data: { confirm: "You sure?" } %></td>
