--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,18 +1,20 @@
+<h1>All Users</h1>
 
-
-<h1>All users</h1>
-<br>
-<table>
-<tr>
-  <th>First name</th>
-  <th>Last name</th>
-  <th>email</th>
-</tr>
-<tr>
-  <% @users.each do |user| %>
+<table class="table">
+  <thead>
+    <tr>
+      <th>First name</th>
+      <th>Last name</th>
+      <th>Email</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <% @users.each do |user| %>
       <td><%= user.first_name %></td>
-        <td><%= user.last_name %></td>
-          <td><%= user.email %></td>
-  </tr>
-  <% end %>
+      <td><%= user.last_name %></td>
+      <td><%= user.email %></td>
+    </tr>
+    <% end %>
+  </tbody>
 </table>
