logo-ified yummyyums, fixed height issue, removed footer

--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -1,5 +1,5 @@
 <div class="page-header">
-  <h1> Sign up for YummyYums! </h1>
+  <h1> Sign up for <span class="yummy-yums">YummyYums</span> </h1>
 </div>
 <div class="col-md-offset-3 col-md-6">
   <%= form_for @user, url: signup_path, class:"form-horizontal"  do |f| %>
