--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -29,7 +29,7 @@ body{
   border-radius: 10px;
   padding: 20px;
   width: 100%;
-  height: 100%;
+  height: auto;
   min-height: 100%;
 
 }
@@ -44,6 +44,11 @@ html, body {
 .navbar-brand{
   font-family: 'Bree Serif', serif;
   font-size: 18pt;
+}
+
+.yummy-yums{
+  font-family: 'Bree Serif', serif;
+  color: #B7250E;
 }
 .navbar-default .navbar-brand{
   color: #B7250E;
@@ -84,7 +89,6 @@ footer {
 .btn-primary{
   background-color:#B7250E;
   border-color:#B7250E;
-  // padding: 14px 30px;
 }
 .btn-primary:hover{
   background-color:#B7250E;
