makes all flash/error messages; does not add styling

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,6 +35,9 @@
   </nav>
   <div class="container fill">
     <div id="wrapper">
+      <% flash.each do |type, message| %>
+        <div class="alert alert-<%= type %>"><%= message %></div>
+      <% end %>
       <%= yield %>
     </div>
   </div>
