--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -108,10 +108,13 @@ footer {
   -moz-osx-font-smoothing: grayscale;
 }
 
-
 .field_with_errors {
   @extend .has-error;
   .form-control {
     color: $state-danger-text;
   }
+}
+
+.alert{
+  text-align: center;
 }
