style user_recipes show page

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,14 +13,7 @@ body{
   padding-top: 50px;
   padding-bottom: 30px;
 }
-// .wrapper{
-//   margin: 50px 20% 0;
-//   height: 1500px;
-//   background-color:white;
-//   opacity: .7;
-//   border-left: 5px solid #B7250E;
-//   border-right: 5px solid #B7250E;
-// }
+
 #wrapper{
   background-color:white;
   opacity: .7;
@@ -60,7 +53,8 @@ html, body {
   color: #B7250E;
 }
 .navbar-default .navbar-brand:hover,
-.navbar-default .navbar-nav > li > a:hover{
+.navbar-default .navbar-nav > li > a:hover,
+.like-button:hover{
   -moz-transform: scale(1.2);
   -webkit-transform: scale(1.2);
   -o-transform: scale(1.2);
@@ -106,4 +100,11 @@ footer {
   line-height: 1;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.like-button,
+.like-button:hover{
+  background-color:transparent;
+  color: #B7250E;
+  font-size:14pt;
 }
