--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,14 +1,14 @@
-<div class="pull-right">
-  <%= link_to 'Add A Recipe', new_recipe_path, class:"btn btn-primary" %>
+<div class="page-header">
+  <div class="pull-right">
+    <%= link_to 'Add A Recipe', new_recipe_path, class:"btn btn-primary" %>
+  </div>
+  <h1>All recipes</h1>
 </div>
-
-<h1>All recipes</h1>
-<br>
 
 <table class="table">
   <thead>
     <tr>
-      <th>Title</th>
+      <th>Recipe</th>
       <th>Description</th>
     </tr>
   </thead>
