style recipe show page

--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,35 +1,52 @@
-<h1 class= "page-header"> <%= @recipe.title %></h1>
+<div class="page-header">
+  <div class="pull-right">
+    <%= link_to 'Add A Recipe', new_recipe_path, class:"btn btn-primary" %>
+  </div>
+  <h1><%= @recipe.title %></h1>
+</div>
 
-<strong>Description:</strong> <%= @recipe.description %>
-<br>
-<br>
-<strong>Instruction: </strong><%= @recipe.instruction %>
 
+
+<div class="recipe">
+<div class="recipe-description"><strong>Description:</strong> <%= @recipe.description %></div>
+
+<div class="recipe-description"><strong>Instruction: </strong><%= @recipe.instruction %></div>
+</div>
 <%= form_for @user_recipe do |f| %>
 <%= f.label :user_id, "Share with" %>
 <%= f.collection_select :user_id, User.all, :id, :email  %>
 <%= f.hidden_field :recipe_id, :value => @recipe.id %>
-<%= f.submit "Share" %>
+<%= f.submit "Share", class: "btn btn-primary like-button" %>
 <% end %>
 
-<div><%= link_to 'Add a Review', new_recipe_review_path(@recipe), class:"btn btn-primary" %></div>
-
-<table class="table">
-  <thead>
-  <tr>
-    <th>Reviews</th>
-    <th>Reviewer</th>
-  </tr>
-</thead>
-  <tbody>
-  <tr>
-    <% @recipe.reviews.each do |review| %>
-    <td><%= review.description %></td>
-    <td><%= review.reviewer %> </td>
-    <td><%= link_to "edit", edit_recipe_review_path(@recipe, review) %> &nbsp;&nbsp;&nbsp;</td>
-    <td><%= link_to "delete", recipe_review_path(@recipe, review), method: :delete,
-        data: { confirm: "You sure?" } %></td>
-  </tr>
-  </tbody>
-<% end %>
-</table>
+<div>
+  <% if @recipe.reviews.count >= 1 %>
+    <div class="pull-right">
+      <%= link_to 'Add a Review', new_recipe_review_path(@recipe), class:"btn btn-primary" %>
+    </div>
+    <table class="table">
+      <thead>
+        <tr>
+          <th>Reviews</th>
+          <th>Reviewer</th>
+        </tr>
+      </thead>
+      <tbody>
+      <tr>
+        <% @recipe.reviews.each do |review| %>
+        <td><%= review.description %></td>
+        <td><%= review.reviewer %> </td>
+        <td><%= link_to "edit", edit_recipe_review_path(@recipe, review) %> &nbsp;&nbsp;&nbsp;</td>
+        <td><%= link_to "delete", recipe_review_path(@recipe, review), method: :delete,
+            data: { confirm: "You sure?" } %>
+        </td>
+      </tr>
+      <% end %>
+      </tbody>
+    </table>
+  <% else %>
+  <div class="new-review col-md-offset-5 col-md-12 ">
+    <%= link_to 'Add a Review', new_recipe_review_path(@recipe), class:"btn btn-primary" %>
+  </div>
+  <% end %>
+</div>
