--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -120,3 +120,13 @@ footer {
   color: #B7250E;
   font-size:14pt;
 }
+#user_recipe_user_id{
+  margin-right: 10px;
+}
+.recipe{
+  padding: 20px 0;
+}
+
+.new-review{
+  margin-top: 10%;
+}
