add validation and truncate to reviews and recipe decriptions

--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -16,7 +16,7 @@
     <% @recipes.each do |recipe| %>
     <tr>
       <td><%= link_to recipe.title, recipe_path(recipe) %></td>
-      <td><%= truncate recipe.description, :length   => 60, :separator => /\w/%></td>
+      <td><%= truncate recipe.description, :length   => 70 %></td>
       <td><%= link_to "edit", edit_recipe_path(recipe) %>&nbsp;&nbsp;&nbsp;</td>
       <td><%= link_to "delete", recipe, method: :delete,
       data: { confirm: "You sure?" } %></td>
