--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
               <li><%= link_to "#{current_user.full_name}", user_path(current_user) %></li>
               <li><%= link_to "Sign Out", logout_path %></li>
             <% else %>
-              <li> <%= link_to current_role%> </li>
+              <li> <%= link_to current_role.capitalize%> </li>
               <li><%= link_to "Sign In", login_path %></li>
               <li><%= link_to "Sign Up", signup_path %></li>
             <% end %>
