--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -16,7 +16,7 @@
         <%= f.label :description %>
       </div>
     </div>
-    <%= f.text_area :description, class:"form-control" %>
+    <%= f.text_area :description, class:"form-control description" %>
   </div>
 
   <div class="form-group">
@@ -26,7 +26,7 @@
       </div>
     </div>
     <div>
-      <%= f.text_area :instruction, class:"form-control" %>
+      <%= f.text_area :instruction, class:"form-control instruction" %>
     </div>
   </div>
 
