--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,11 +49,11 @@
       <%= yield %>
     </div>
   </div>
-  <!-- <footer>
+  <footer>
     <div class="container footer">
       <p class="pull-right"><a href="#">Back to top</a></p>
       <p class="team-name">a los quatros production &copy;2015</p>
     </div>
-  </footer> -->
+  </footer>
 </body>
 </html>
