sort users in collection_select alphabetically

--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -14,7 +14,8 @@
 </div>
 <%= form_for @user_recipe do |f| %>
 <%= f.label :user_id, "Share with" %>
-<%= f.collection_select :user_id, User.all, :id, :email  %>
+<%= f.collection_select :user_id, User.order(email: :asc).all, :id, :email, {include_blank: "Select User"}  %>
+
 <%= f.hidden_field :recipe_id, :value => @recipe.id %>
 <%= f.submit "Share", class: "btn btn-primary like-button" %>
 <% end %>
