--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -10,7 +10,7 @@
         <%= f.label :description %>
       </div>
     </div>
-    <%= f.text_area :description, class:"form-control" %>
+    <%= f.text_area :description, class:"form-control description" %>
   </div>
 
   <div class="form-group">
