--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,4 +1,9 @@
-<h1>Add a review for <%= @recipe.title %></h1>
-<br>
 
+
+<div class="page-header">
+  <h1>Add a review for <%= @recipe.title %></h1>
+</div>
+
+<div class="col-md-offset-3 col-md-6">
 <%= render 'form' %>
+</div>
