--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,18 +1,20 @@
+<% if @current_role == "admin" %>
+<%= link_to "Admin: create new user", new_user_path %>
+<% end %>
 <h1>All Users</h1>
 
 <table class="table">
   <thead>
     <tr>
-      <th>First name</th>
-      <th>Last name</th>
+      <th>Name</th>
+      <!-- <th>Last name</th> -->
       <th>Email</th>
     </tr>
   </thead>
   <tbody>
     <tr>
       <% @users.each do |user| %>
-      <td><%= user.first_name %></td>
-      <td><%= user.last_name %></td>
+      <td><%= link_to "#{user.first_name} #{user.last_name}", user_path(user) %> </td>
       <td><%= user.email %></td>
     </tr>
     <% end %>
