--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,6 +1,20 @@
 <div class="col-md-12">
 
-  <%= form_for @recipe, class:"form-horizontal"  do |f| %>
+<%= form_for @recipe, class:"form-horizontal"  do |f| %>
+
+<% if @recipe.errors.any? %>
+<div id="error_explanation">
+  <div class ="alert alert-danger"><h4><%= pluralize(@recipe.errors.count, "error") %> prohibited from being saved:</h2>
+
+    <ul>
+      <% @recipe.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+      <% end %>
+    </ul>
+  </div>
+</div>
+<% end %>
+
   <div class="form-group">
     <div class="field">
       <div class="control-label">
