--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -3,6 +3,18 @@
 
   <%= form_for [@recipe, @review], class:"form-horizontal"  do |f| %>
 
+  <% if @review.errors.any? %>
+  <div id="error_explanation">
+    <div class ="alert alert-danger"><h4><%= pluralize(@review.errors.count, "error") %> prohibited from being saved:</h2>
+
+      <ul>
+        <% @review.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+        <% end %>
+      </ul>
+    </div>
+  </div>
+  <% end %>
 
   <div class="form-group">
     <div class="field">
