--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,11 @@
     <div class="container">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand" href="/">YummyYums</a>
+          <% if current_user == "visitor" %>
+            <%= link_to "YummyYums", recipes_path, class: "navbar-brand" %>
+          <% else %>
+            <a class="navbar-brand" href="/">YummyYums</a>
+          <% end %>
         </div>
         <ul class="nav navbar-nav">
           <li><%= link_to "All Recipes", recipes_path %></li>
