format all error fields to match

--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -4,11 +4,11 @@
 
 <% if @recipe.errors.any? %>
 <div id="error_explanation">
-  <div class ="alert alert-danger"><h4><%= pluralize(@recipe.errors.count, "error") %> prohibited from being saved:</h2>
+  <div class ="alert alert-danger"><h4><%= pluralize(@recipe.errors.count, "error") %> prohibited from being saved:</h4>
 
     <ul>
       <% @recipe.errors.full_messages.each do |message| %>
-      <li><%= message %></li>
+    <h4>  <li><%= message %></li></h4>
       <% end %>
     </ul>
   </div>
