--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -5,11 +5,11 @@
 
   <% if @review.errors.any? %>
   <div id="error_explanation">
-    <div class ="alert alert-danger"><h4><%= pluralize(@review.errors.count, "error") %> prohibited from being saved:</h2>
+    <div class ="alert alert-danger"><h4><%= pluralize(@review.errors.count, "error") %> prohibited from being saved:</h4>
 
       <ul>
         <% @review.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
+        <h4><li><%= message %></li></h4>
         <% end %>
       </ul>
     </div>
