--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,6 @@
-<h1>Edit <%= @user.first_name %> <%= @user.last_name %> (Admin use only)</h1>
-<br>
-
-<%= render 'form' %>
+<div class="page-header">
+  <h1>Edit <%= @user.first_name %> <%= @user.last_name %></h1>
+</div>
+<div class="col-md-offset-1 col-md-10">
+  <%= render 'form' %>
+</div>
