major trimming and bug cleanup

--- a/app/views/user_recipes/index.html.erb
+++ b/app/views/user_recipes/index.html.erb
@@ -4,7 +4,11 @@
   </div>
   <h1>Your recipes</h1>
 </div>
-
+<!-- <%# if @user.user_recipes.nil? %>
+<div class="col-md-offset-2">
+<p> You don't have any recipes yet! Browse all recipes or add your own! </p>
+</div>
+<%#else %> -->
 <table class="table">
   <thead>
     <tr>
@@ -43,3 +47,4 @@
       </tbody>
 
     </table>
+<%# end %>
