--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,9 +1,9 @@
 <div class="page-header">
-  <% if @current_role == "admin" %>
+  <%# if @current_role == "admin" %>
   <div class="pull-right">
     <%= link_to "Create new user", new_user_path, class: "btn btn-primary" %>
   </div>
-  <% end %>
+  <%# end %>
   <h1>All users</h1>
 </div>
 
