--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -12,6 +12,10 @@
 
 <div class="recipe-description"><strong>Instruction: </strong><%= @recipe.instruction %></div>
 </div>
+<div>
+  <%= link_to 'Edit this Recipe', edit_recipe_path(@recipe), class:"btn btn-primary" %>
+</div>
+
 <%= form_for @user_recipe do |f| %>
 <%= f.label :user_id, "Share with" %>
 <%= f.collection_select :user_id, User.order(email: :asc).all, :id, :email, {include_blank: "Select User"}  %>
