--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -15,7 +15,7 @@
       <%= f.label :last_name %>
     </div>
   </div>
-  <%= f.text_area :last_name, class:"form-control" %>
+  <%= f.text_field :last_name, class:"form-control" %>
 </div>
 
 <div class="form-group">
@@ -25,17 +25,20 @@
     </div>
   </div>
   <div>
-    <%= f.text_area :email, class:"form-control" %>
+    <%= f.text_field :email, class:"form-control" %>
   </div>
 </div>
 
 <div class="form-group">
     <div class="control-label">
-      <%= f.label :role, 'Role:' %>&nbsp;&nbsp;
-      <%= f.collection_select :role, ["admin", "member"] %>
-
+      <%= f.label :role, 'Role (Enter only "admin" or "member")' %>
+      <div>
+        <%= f.text_field :role, class:"form-control" %>
+      </div>
     </div>
 </div>
+
+<% if @user.new_record? %>
 
 <div class="form-group">
   <div class="field">
@@ -58,6 +61,8 @@
     <%= f.password_field :password_confirmation, class:"form-control" %>
   </div>
 </div>
+
+<% end %>
 
 <div class="form-group">
   <div class="action">
